fix: delete align self from nested-lists-answers

--- a/pages/main/css/style.css
+++ b/pages/main/css/style.css
@@ -1115,7 +1115,6 @@ body {
   width: 784px;
   display: flex;
   flex-direction: column;
-  align-items: end;
   row-gap: 61px;
   padding-left: 56px;
   padding-top: 50px;
