--- a/pages/main/scss/blocks/_nested-lists.scss
+++ b/pages/main/scss/blocks/_nested-lists.scss
@@ -44,7 +44,6 @@
   width: 784px;
   display: flex;
   flex-direction: column;
-  align-items: end;
   row-gap: 61px;
   padding-left: 56px;
   padding-top: 50px;
